# djongo

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING  ISSUE_TEMPLATE.md  LICENSE  MANIFEST  MANIFEST.in  README.md  __init__.py  base.py  compiler.py  creation.py  cursor.py  database.py  exceptions.py  features.py  introspection.py  no-response.yml  operations.py  pyproject.toml  requirements.txt  schema.py  setup.py  storage.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: tests.yml
apidocs/: Makefile  conf.py  djongo.rst  index.rst
djongo/: LICENSE  README.md  __init__.py  admin.py  base.py  creation.py  cursor.py  database.py  exceptions.py  features.py  introspection.py  models.py  operations.py  requirements.txt  schema.py  setup.py  sql2mongo.py  sql_parse.py  storage.py  transaction.py  untitled-1.py  utils.py
djongo/djongo/: operations.py  storage.py  transaction.py
djongo/dynamic_formsets/: apps.py
djongo/models/: __init__.py  fields.py  indexes.py  lookup.py  lookups.py
djongo/sql2mongo/: __init__.py  aggregation.py  converters.py  functions.py  operators.py  query.py  sql_tokens.py  validation.py
docs/: 404.html  CNAME  Gemfile  README.md  _build.py  _config.yml  chunk-27PYSS5C.js  chunk-2JPHRIOV.js  chunk-2RYEMGCD.js  chunk-4HZV3DS4.js  chunk-4IRGEMRW.js  chunk-55P5SAX4.js  chunk-5AO3I5TM.js  chunk-5IGHHJXO.js  chunk-5WAR7G52.js  chunk-6HBMNA6P.js  chunk-72YVAP3K.js  chunk-7CBO5UNE.js  chunk-7FL24NYI.js  chunk-7PACXJD2.js  chunk-AAVRSJOW.js  chunk-ADW5CDIB.js  chunk-BDVYIMOP.js  chunk-BQS5AVTG.js  chunk-C2UBXRKG.js  chunk-DBQGQHSG.js  chunk-DM5BRXAE.js  chunk-F6WK2S4P.js  chunk-FDEVB4XX.js  chunk-FYA5XNTV.js  chunk-FZX2Q27Q.js  chunk-GH5PWRKB.js  chunk-GTGB5SJ3.js  chunk-H35QOOA6.js  chunk-HBP7BZ2L.js  chunk-HCHZZFOJ.js  chunk-HDX5X56L.js  chunk-HEUFHRRO.js  chunk-HZTNMKQF.js  chunk-I7LVB5GL.js  (+115 more)
docs/_apidocs/: conf.py  djongo.models.rst  index.rst  make.bat
docs/_data/: home.yml  home_page.yml  navigation.yml  navigation2.yml  server.yml  ui-text.yml
docs/_drafts/: todo.txt
docs/_includes/: advert_row  links  (+13 more)
models/: __init__.py  fields.py
pkg/: requirements.txt  setup.py  tox.ini
sql2mongo/: __init__.py  aggregation.py  constraints.py  converters.py  functions.py  operators.py  query.py  sql_tokens.py  validation.py
tests/: extract_sql.py  main.py  precheckin.py  settings.py  test_databasewrapper.py  test_models.py  test_sqlparsing.py
xdocsx/: README.md  todo.txt
(+556 files in other folders)
