[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dynamic = ["version", "optional-dependencies"]
name = "djongo"
dependencies = [
    'sqlparse==0.2.4',
    'pymongo>=3.7.0,<=3.11.4',
    'django>=2.1,<=3.1.12',
    'pytz>=2018.5'
]
authors = [
    { name = "doableware", email = 'support@doableware.com' }
]
license= {text = "AGPL"}
keywords = ["Django", "Djongo", "MongoDB", "driver", "connector"]
requires-python = ">=3.6"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3.6',
]
description = "Djongo: The Django MongoDB connector"
readme = "README.md"
[project.urls]
Homepage = "https://www.djongomapper.com/"
Documentation = "https://www.djongomapper.com/docs/"
Repository = "https://github.com/doableware/djongo.git"

[tool.setuptools.dynamic]
version = {attr = "djongo.__version__"}