[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dynamic = ["version", "optional-dependencies"]
name = "djongo"
dependencies = [
    'sqlparse>=0.4.4',
    'pymongo>=3.7.0',
    'django>=2.1',
    'pytz>=2018.5'
]
authors = [
    { name = "doableware", email = 'support@doableware.com' }
]
license= {text = "AGPL"}
keywords = ["Django", "Djongo", "MongoDB", "driver", "connector"]
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Framework :: Django :: 3.2',
    'Framework :: Django :: 4.0',
    'Framework :: Django :: 4.1',
    'Framework :: Django :: 4.2',
    'Framework :: Django :: 5.0',
    'Framework :: Django :: 5.1',
]
description = "Djongo: The Django MongoDB connector"
readme = "README.md"
[project.urls]
Homepage = "https://www.djongomapper.com/"
Documentation = "https://www.djongomapper.com/docs/"
Repository = "https://github.com/doableware/djongo.git"

[tool.setuptools.dynamic]
version = {attr = "djongo.__version__"}